<resources>
    <string name="app_name">EcoTour</string>

    <string name="Ir_a_MainPage">Página Principal</string>
    <string name="title_activity_maps">Map</string>
    <string name="descripción">description</string>
    <string name="title_activity_main_page">ScrollingActivity</string>
    <string name="iniciar_boton">Iniciar Sesión</string>
    <string name="registrarse_boton">Registrarse</string>
    <string name="texto_mapas">Mapa Interactivo de Parques Naturales</string>
    <string name="texto_logo">¡La Naturaleza a un paso de ti!</string>
    <string name="texto_favoritos">Tus Lugares Favoritos</string>
    <string name="texto_destinos">Descubre destinos cerca a ti</string>
    <string name="texto_reservas">Listado de las reservas</string>
    <string name="texto_favoritos_Fragment">Tus favoritos</string>
    <string name="texto_viajes_Fragment">Tus viajes programados</string>
    <string name="Continuar">Sigue explorando...</string>
    <string name="Billetera">Calculadora de presupuesto</string>
    <string name="BilleteraSugerencias">Reservas sugeridas para tí</string>
    <string name="texto_regresar">Regresar</string>
    <string name="ingresar_email">Ingresa tu Email</string>
    <string name="restablecer">Restablecer contraseña</string>

    <string name="error_permiso">Para acceder a todas las funcionalidades permite acceder a la ubicación</string>


    <string name="indicadorMaps_boton">Indicación</string>

    <string name="action_settings">Settings</string>

    <string name="recuperar_contra">Recuperar contraseña</string>

    //Main
    <string name="ingreso">Ingresar sin iniciar sesión</string>
    <string name="iniciar">Iniciar Sesión</string>

    //Registrarse e inicar
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="continua">Continuar</string>
    <string name="olvide_contra">Olvidé mi contraseña</string>


    //Billetera

    <string-array name="noches">
        <item>Máximo precio noche/persona</item>
        <item>15000</item>
        <item>20000</item>
        <item>30000</item>
        <item>40000</item>
        <item>50000</item>


    </string-array>

    <string-array name="habitaciones">
        <item>Habitaciones</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4 o más</item>
    </string-array>

    <string-array name="personas">
        <item>Personas</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4 o más</item>

    </string-array>

    <string name="Precio_noche">Precio por noche</string>
    <string name="Habitaciones">Cantidad de habitaciones</string>
    <string name="Personas">Cantidad de personas</string>
    <string name="boton_billetera"> Guardar preferencias</string>

    //Programar viaje

    <string name="Programar_Viaje">Programa tu próximo viaje</string>

    <string name="Año">Año</string>
    <string name="Mes">Mes</string>
    <string name="Dia_inicio">Día inicio</string>
    <string name="Dia_final">Día final</string>
    <string name="Notificacion">Notificación</string>

    <string-array name="año">
        <item>Año</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>

    </string-array>

    <string-array name="mes">
        <item>Mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>

    </string-array>

    <string-array name="dia_inicial">
        <item>Día</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    //Listado reservas
    <string name="ListaReservasTitulo">Áreas Protegidas</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="c_mo_llegar">¿Cómo llegar?</string>
    <string name="poblaciones_cercanas">Poblaciones cercanas</string>
    <string name="temperatura">Temperatura</string>
    <string name="flora_y_fauna">Flora y Fauna</string>

</resources>