<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211E3C06"
    tools:context=".BilleteraFragment">

    <ScrollView
        android:id="@+id/Scroll_favoritos"
        android:layout_width="413dp"
        android:layout_height="688dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#86A846"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="#86A846"
                    android:fontFamily="@font/scada"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/Billetera"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#0C0C0C"
                    android:textSize="28sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#1E3C06" />

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#081E3C06" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#4D86A846"
                    android:fontFamily="@font/scada"
                    android:gravity="center|center_horizontal"
                    android:text="@string/Precio_noche"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_noches"
                    android:layout_width="244dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="#081E3C06" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#4D86A846"
                    android:gravity="center"
                    android:text="@string/Habitaciones"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_habitaciones"
                    android:layout_width="489dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="#081E3C06" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#4D86A846"
                    android:fontFamily="@font/scada"
                    android:gravity="center|center_horizontal"
                    android:text="@string/Personas"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_personas"
                    android:layout_width="491dp"
                    android:layout_height="71dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="#081E3C06" />

            <Button
                android:id="@+id/billera_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/boton_billetera"
                app:backgroundTint="@color/purple_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="410dp"
                    android:layout_height="186dp"
                    android:src="@drawable/logo_ecotour" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
